force-app/main/default/objects/KimbleOne__SalesOpportunity__c/KimbleOne__SalesOpportunity__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Sales Opportunity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>