force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__Account__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.KimbleOne__IsCustomer__c</field>
            <operation>equals</operation>
            <valueField>Account.KimbleOne__IsCustomer__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Opportunities</relationshipLabel>
    <relationshipName>SalesOpportunities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>