force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__CloseDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CloseDate__c</fullName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>