force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__ContractMargin__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContractMargin__c</fullName>
    <formula>NULL</formula>
    <label>Z_Obsolete - Contract Margin Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>