force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__ContractMarginAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContractMarginAmount__c</fullName>
    <formula>NULL</formula>
    <label>Z_Obsolete - Contract Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>