force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__ContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContractRevenue__c</fullName>
    <label>Z_Obsolete - Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>