force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__CustomerAccount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CustomerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Opportunities (End Customer)</relationshipLabel>
    <relationshipName>SalesOpportunitiesCustomerAccount</relationshipName>
    <type>Lookup</type>
</CustomField>