force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__Description__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Description__c</fullName>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>