force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__InvoicingCurrencyISOCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyISOCode__c</fullName>
    <label>Z_Obsolete - Invoicing Currency ISO Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>