force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Opportunities</relationshipLabel>
    <relationshipName>SalesOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>