force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__OpportunitySource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OpportunitySource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>KimbleOne__OpportunitySource__c</referenceTo>
    <relationshipLabel>Sales Opportunities</relationshipLabel>
    <relationshipName>Sales_Opportunities_del</relationshipName>
    <type>Lookup</type>
</CustomField>