force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__Proposition__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Proposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Proposition</label>
    <referenceTo>KimbleOne__Proposition__c</referenceTo>
    <relationshipLabel>Sales Opportunities</relationshipLabel>
    <relationshipName>SalesOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>