force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__ResponseRequiredDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResponseRequiredDate__c</fullName>
    <label>Response Required Date</label>
    <type>Date</type>
</CustomField>