force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__ShortName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShortName__c</fullName>
    <label>Z_Obsolete - Short Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>