force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - TaxCode</label>
    <referenceTo>KimbleOne__TaxCode__c</referenceTo>
    <relationshipLabel>Sales Opportunities</relationshipLabel>
    <relationshipName>Sales_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>