force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__WonLostNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__WonLostNarrative__c</fullName>
    <label>Narrative</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>