force-app/main/default/objects/KimbleOne__SalesOpportunity__c/fields/KimbleOne__WonLostReason__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__WonLostReason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decision Postponed</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>