force-app/main/default/objects/KimbleOne__SalesOpportunity__c/validationRules/KimbleOne__MarketingCampaignMandatoryForSource.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__MarketingCampaignMandatoryForSource</fullName>
    <active>false</active>
    <description>Obsolete</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Z_Obsolete - Marketing Campaign must be entered</errorMessage>
</ValidationRule>