force-app/main/default/objects/KimbleOne__SalesOpportunity__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__OpportunityStage__c</columns>
    <columns>KimbleOne__ContractRevenue__c</columns>
    <columns>KimbleOne__WeightedContractRevenue__c</columns>
    <columns>KimbleOne__ContractCost__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>KimbleOne__InvoicingCurrencyISOCode__c</columns>
    <columns>KimbleOne__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>