force-app/main/default/objects/KimbleOne__SalesOpportunity__c/listViews/KimbleOne__SalesOpportunitiesView.listView-meta.xml
<ListView>
    <fullName>KimbleOne__SalesOpportunitiesView</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Account__c</columns>
    <columns>KimbleOne__Proposal__c</columns>
    <columns>KimbleOne__CloseDate__c</columns>
    <columns>KimbleOne__ForecastStatus__c</columns>
    <columns>KimbleOne__OpportunityStage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Sales Opportunities View</label>
    <language>en_US</language>
</ListView>